--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -72,31 +72,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@ipywidgets.interact_manual()\n",
-    "def extract_entities_and_relations(\n",
-    "    input_text=ipywidgets.Textarea(\n",
+    "from collections import OrderedDict\n",
+    "import IPython\n",
+    "\n",
+    "bbs_widgets = OrderedDict()\n",
+    "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
     "        value=\"Autophagy maintains tumour growth through circulating arginine. Autophagy captures intracellular components and delivers them to lysosomes, where they are degraded and recycled to sustain metabolism and to enable survival during starvation1-5. Acute, whole-body deletion of the essential autophagy gene Atg7 in adult mice causes a systemic metabolic defect that manifests as starvation intolerance and gradual loss of white adipose tissue, liver glycogen and muscle mass1. Cancer cells also benefit from autophagy. Deletion of essential autophagy genes impairs the metabolism, proliferation, survival and malignancy of spontaneous tumours in models of autochthonous cancer6,7. Acute, systemic deletion of Atg7 or acute, systemic expression of a dominant-negative ATG4b in mice induces greater regression of KRAS-driven cancers than does tumour-specific autophagy deletion, which suggests that host autophagy promotes tumour growth1,8. Here we show that host-specific deletion of Atg7 impairs the growth of multiple allografted tumours, although not all tumour lines were sensitive to host autophagy status. Loss of autophagy in the host was associated with a reduction in circulating arginine, and the sensitive tumour cell lines were arginine auxotrophs owing to the lack of expression of the enzyme argininosuccinate synthase 1. Serum proteomic analysis identified the arginine-degrading enzyme arginase I (ARG1) in the circulation of Atg7-deficient hosts, and in vivo arginine metabolic tracing demonstrated that serum arginine was degraded to ornithine. ARG1 is predominantly expressed in the liver and can be released from hepatocytes into the circulation. Liver-specific deletion of Atg7 produced circulating ARG1, and reduced both serum arginine and tumour growth. Deletion of Atg5 in the host similarly regulated [corrected] circulating arginine and suppressed tumorigenesis, which demonstrates that this phenotype is specific to autophagy function rather than to deletion of Atg7. Dietary supplementation of Atg7-deficient hosts with arginine partially restored levels of circulating arginine and tumour growth. Thus, defective autophagy in the host leads to the release of ARG1 from the liver and the degradation of circulating arginine, which is essential for tumour growth; this identifies a metabolic vulnerability of cancer. (PMID:30429607)\",\n",
     "        layout=ipywidgets.Layout(width='80%', height='400px')\n",
     "    )\n",
-    "):\n",
-    "    doc = NER_PIPELINE(input_text)\n",
-    "    lines = []\n",
-    "    for ent in doc.ents:\n",
-    "        lines.append(pd.Series({'entity': ent.text,\n",
-    "                                'entity_type': ent.label_,\n",
-    "                                'property':None,\n",
-    "                                'property_value':None,\n",
-    "                                'property_type':None,\n",
-    "                                'property_value_type':None,\n",
-    "                                'ontology_source':'MyOntology',\n",
-    "                                'paper_id':0,\n",
-    "                                'start_pos': ent.start_char,\n",
-    "                                'end_pos': ent.end_char,\n",
-    "                                }))\n",
+    "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
+    "    description='Extract Entities & Properties!',\n",
+    "    layout=ipywidgets.Layout(width='30%')\n",
+    ")\n",
     "\n",
+    "bbs_widgets['out'] = ipywidgets.Output(layout={'border': '0.5px solid black'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_entities_and_relations(b):\n",
+    "    bbs_widgets['out'].clear_output()\n",
+    "    with bbs_widgets['out']:\n",
+    "        doc = NER_PIPELINE(bbs_widgets['input_text'].value)\n",
+    "        lines = []\n",
+    "        for ent in doc.ents:\n",
+    "            lines.append(pd.Series({'entity': ent.text,\n",
+    "                                    'entity_type': ent.label_,\n",
+    "                                    'property':None,\n",
+    "                                    'property_value':None,\n",
+    "                                    'property_type':None,\n",
+    "                                    'property_value_type':None,\n",
+    "                                    'ontology_source':'MyOntology',\n",
+    "                                    'paper_id':0,\n",
+    "                                    'start_pos': ent.start_char,\n",
+    "                                    'end_pos': ent.end_char,\n",
+    "                                    }))\n",
     "\n",
-    "    df = pd.DataFrame(lines)\n",
-    "    display(df)"
+    "        df = pd.DataFrame(lines)\n",
+    "        display(df)\n",
+    "\n",
+    "bbs_widgets['submit_button'].on_click(extract_entities_and_relations)\n",
+    "\n",
+    "ordered_widgets = list(bbs_widgets.values())\n",
+    "main_widget = ipywidgets.VBox(ordered_widgets)\n",
+    "IPython.display.display(main_widget)"
    ]
   },
   {
