Create initial version

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -3,17 +3,233 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from abc import ABC, abstractmethod\n",
+    "from collections import OrderedDict\n",
+    "import itertools\n",
+    "import pathlib\n",
+    "import sys\n",
+    "sys.path.append('/raid/users/krepl/BlueBrainSearch/submodules/scibert')\n",
+    "\n",
+    "from allennlp.predictors import Predictor\n",
     "import ipywidgets\n",
+    "import IPython\n",
     "import pandas as pd\n",
     "import scispacy\n",
+    "from scibert.models.text_classifier import TextClassifier\n",
     "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_re(doc, sent, ent_1, ent_2, etype_symbols):\n",
+    "    \"\"\"Preprocess sentence for the SciBERT relation extraction model.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    doc : spacy.tokens.Doc\n",
+    "        The entire document (input text). Use for absolute referencing.\n",
+    "    \n",
+    "    sent : spacy.tokens.Span\n",
+    "        One sentence from the `doc` where we look for relations.\n",
+    "\n",
+    "    ent_1 : spacy.tokens.Span\n",
+    "        The first entity in the sentence. One can get its type by using the `label_` attribute.\n",
+    "    \n",
+    "    ent_2 : spacy.tokens.Span\n",
+    "        The second entity in the sentence.One can get its type by using the `label_` attribute.\n",
+    "    \n",
+    "    etype_symbols: dict\n",
+    "        Keys represent different entity types (\"GGP\", \"CHEBBI\") and the values are tuples of size 2.\n",
+    "        Each of these tuples represents the starting, ending symbol to wrap the recognized entity with.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : str\n",
+    "        String representing an annotated sentence created out of the original one. \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    etype_1 = ent_1.label_\n",
+    "    etype_2 = ent_2.label_\n",
+    "    \n",
+    "    if not (etype_1 in etype_symbols and etype_2 in etype_symbols):\n",
+    "        raise ValueError('Please specify the special symbols for both of the entity types.')\n",
+    "    \n",
+    "    tokens = []\n",
+    "    i = sent.start\n",
+    "    while i < sent.end:\n",
+    "        new_token = ' ' # hack to keep the punctuation nice\n",
+    "\n",
+    "        if ent_1.start == i:\n",
+    "            start, end = ent_1.start, ent_1.end\n",
+    "            new_token += etype_symbols[etype_1][0] + doc[start:end].text + etype_symbols[etype_1][1]\n",
+    "\n",
+    "        elif ent_2.start == i:\n",
+    "            start, end = ent_2.start, ent_2.end\n",
+    "            new_token += etype_symbols[etype_2][0] + doc[start:end].text + etype_symbols[etype_2][1]\n",
+    "\n",
+    "        else:\n",
+    "            start, end = i, i + 1\n",
+    "            new_token = doc[i].text if doc[i].is_punct else new_token + doc[i].text\n",
+    "\n",
+    "        tokens.append(new_token)\n",
+    "        i += end - start\n",
+    "    \n",
+    "    return ''.join(tokens).strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helpers\n",
+    "def preprocess_re_OLD(doc, sent, etype_1, etype_2, etype_symbols):\n",
+    "    \"\"\"Preprocess sentence for the SciBERT relation extraction model.\n",
+    "    \n",
+    "    Given one sentence, one extracts all possible pairs for etype_1 and etype_1\n",
+    "    entities and annotates the original sentence accordingly.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    doc : spacy.tokens.Doc\n",
+    "        The entire document (input text). Use for absolute referencing.\n",
+    "    \n",
+    "    sent : spacy.tokens.Span\n",
+    "        One sentence from the `doc` where we look for relations.\n",
+    "\n",
+    "    etype_1 : str\n",
+    "        Name of the subject entity type - i.e. \"GGP\". See Spacy and SciSpacy pretrained models.\n",
+    "    \n",
+    "    etype_2 : str\n",
+    "        Name of the object entity type - i.e \"CHEBI\". See Spacy and SciSpacy pretrained models.\n",
+    "    \n",
+    "    etype_symbols: dict\n",
+    "        Keys represent different entity types (\"GGP\", \"CHEBBI\") and the values are tuples of size 2.\n",
+    "        Each of these tuples represents the starting, ending symbol to wrap the recognized entity with.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    result : list\n",
+    "        List of strings representing all annotated sentences created out of the original one. Might\n",
+    "        be empty.\n",
+    "    \"\"\"\n",
+    "    if not (etype_1 in etype_symbols and etype_2 in etype_symbols):\n",
+    "        raise ValueError('Please specify the special symbols for both of the entity types.')\n",
+    "    \n",
+    "    if etype_1 == etype_2:\n",
+    "        raise ValueError('The two entity types need to be different')\n",
+    "    \n",
+    "    entities_1 = {ent for ent in sent.ents if ent.label_ == etype_1}  # remove duplicates\n",
+    "    entities_2 = {ent for ent in sent.ents if ent.label_ == etype_2}  # remove duplicates\n",
+    "    \n",
+    "    all_pairs = itertools.product(entities_1, entities_2)\n",
+    "    \n",
+    "    result = []\n",
+    "    for first, second in all_pairs:\n",
+    "        # add sanity check no overlap (should be impossible)\n",
+    "        \n",
+    "        tokens = []\n",
+    "        i = sent.start\n",
+    "\n",
+    "        while i < sent.end:\n",
+    "            new_token = ' ' # hack to keep the punctuation nice\n",
+    "    \n",
+    "            if first.start == i:\n",
+    "                start, end = first.start, first.end\n",
+    "                new_token += etype_symbols[etype_1][0] + doc[start:end].text + etype_symbols[etype_1][1]\n",
+    "    \n",
+    "            elif second.start == i:\n",
+    "                start, end = second.start, second.end\n",
+    "                new_token += etype_symbols[etype_2][0] + doc[start:end].text + etype_symbols[etype_2][1]\n",
+    "            \n",
+    "            else:\n",
+    "                start, end = i, i + 1\n",
+    "                new_token = doc[i].text if doc[i].is_punct else new_token + doc[i].text\n",
+    "             \n",
+    "            tokens.append(new_token)\n",
+    "            i += end - start\n",
+    "    \n",
+    "        result.append(''.join(tokens).strip())\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class REModel(ABC):\n",
+    "    \"\"\"Abstract interface for relationship extraction models.\n",
+    "    \n",
+    "    Inspired by SciBERT.\n",
+    "    \"\"\"\n",
+    "    @abstractmethod\n",
+    "    def predict(self, preprocessed_sentence):\n",
+    "        \"\"\"Given an annotated sentence predict the relationship.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        preprocessed_sentence : str\n",
+    "            Sentence with entities being annotated accordingly.\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        relation : str\n",
+    "            Relation type.\n",
+    "        \"\"\"\n",
+    "    \n",
+    "    @property\n",
+    "    @abstractmethod\n",
+    "    def symbols(self):\n",
+    "        \"\"\"Dictionary mapping entity types to their annotation symbols.\n",
+    "        \n",
+    "        General structure: {'ENTITY_TYPE': ('SYMBOL_LEFT', 'SYMBOL_RIGHT')}\n",
+    "        \"\"\"\n",
+    "    \n",
+    "\n",
+    "class ChemProt(REModel):\n",
+    "    \"\"\"Pretrained model extracting 13 relations between chemicals and proteins.\"\"\"\n",
+    "\n",
+    "    def __init__(self, model_path):\n",
+    "        self.model_ = Predictor.from_path(model_path, predictor_name='text_classifier')\n",
+    "        self.labels = [\n",
+    "            'INHIBITOR',\n",
+    "            'SUBSTRATE',\n",
+    "            'INDIRECT-DOWNREGULATOR',\n",
+    "            'INDIRECT-UPREGULATOR',\n",
+    "            'ACTIVATOR',\n",
+    "            'ANTAGONIST',\n",
+    "            'PRODUCT-OF',\n",
+    "            'AGONIST',\n",
+    "            'DOWNREGULATOR',\n",
+    "            'UPREGULATOR',\n",
+    "            'AGONIST-ACTIVATOR',\n",
+    "            'SUBSTRATE_PRODUCT-OF',\n",
+    "            'AGONIST-INHIBITOR']\n",
+    "    \n",
+    "    @property\n",
+    "    def symbols(self):\n",
+    "        return {'GGP': ('[[ ', ' ]]'),\n",
+    "                 'CHEBI': ('<< ', ' >>')}\n",
+    "\n",
+    "        \n",
+    "    def predict(self, processed_sentence):\n",
+    "        s = pd.Series(self.model_.predict(sentence=processed_sentence)['class_probs'], index=self.labels)\n",
+    "\n",
+    "        return s.idxmax()\n",
+    "    \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -51,28 +267,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "NER_PIPELINE = spacy.load(\"en_ner_craft_md\")"
+    "# Paths\n",
+    "chemprot_path = pathlib.Path('/raid/users/krepl/BlueBrainSearch/submodules/scibert/training_results/first_simple/model.tar.gz')\n",
+    "\n",
+    "# Models\n",
+    "NER_PIPELINE = spacy.load(\"en_ner_craft_md\")\n",
+    "RE_MODELS = {('CHEBI', 'GGP'): ChemProt(chemprot_path)}\n",
+    "\n",
+    "# Table headers\n",
+    "HEADERS = ['entity',\n",
+    "           'entity_type',\n",
+    "           'property',\n",
+    "           'property_value',\n",
+    "           'property_type',\n",
+    "           'property_value_type',\n",
+    "           'ontology_source',\n",
+    "           'paper_id',\n",
+    "           'start_pos',\n",
+    "           'end_pos']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
-    "import IPython\n",
     "\n",
     "bbs_widgets = OrderedDict()\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
@@ -90,32 +313,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_entities_and_relations(b):\n",
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        doc = NER_PIPELINE(bbs_widgets['input_text'].value)\n",
-    "        lines = []\n",
-    "        for ent in doc.ents:\n",
-    "            lines.append(pd.Series({'entity': ent.text,\n",
-    "                                    'entity_type': ent.label_,\n",
-    "                                    'property':None,\n",
-    "                                    'property_value':None,\n",
-    "                                    'property_type':None,\n",
-    "                                    'property_value_type':None,\n",
-    "                                    'ontology_source':'MyOntology',\n",
-    "                                    'paper_id':0,\n",
-    "                                    'start_pos': ent.start_char,\n",
-    "                                    'end_pos': ent.end_char,\n",
-    "                                    }))\n",
     "\n",
-    "        df = pd.DataFrame(lines)\n",
+    "        lines = []\n",
+    "        for sent in doc.sents:\n",
+    "            detected_entities = [ent for ent in sent.ents]\n",
+    "\n",
+    "            for s_ent in detected_entities:\n",
+    "                # add single lines for entities\n",
+    "                lines.append({'entity': s_ent.text, \n",
+    "                              'entity_type': s_ent.label_,\n",
+    "                              'start_pos': s_ent.start_char,\n",
+    "                              'end_pos': s_ent.end_char,\n",
+    "                             })\n",
+    "\n",
+    "                # extract relations\n",
+    "                for o_ent in detected_entities:\n",
+    "                    so = (s_ent.label_, o_ent.label_)\n",
+    "                    if so in RE_MODELS:\n",
+    "                        preproceses_sent = preprocess_re(doc, sent, s_ent, o_ent, RE_MODELS[so].symbols)\n",
+    "                        property_ = RE_MODELS[so].predict(preproceses_sent)\n",
+    "                        lines.append({'entity': s_ent.text, \n",
+    "                                      'entity_type': s_ent.label_,\n",
+    "                                      'start_pos': s_ent.start_char,\n",
+    "                                      'end_pos': s_ent.end_char,\n",
+    "                                      'property_type': 'relation',\n",
+    "                                      'property': property_,\n",
+    "                                      'property_value': o_ent.text,\n",
+    "                                      'property_value_type': o_ent.label_\n",
+    "                                     })\n",
+    "\n",
+    "\n",
+    "        df = pd.DataFrame(lines, columns=HEADERS)\n",
     "        display(df)\n",
     "\n",
     "bbs_widgets['submit_button'].on_click(extract_entities_and_relations)\n",
