Reshape all the steps

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Goal of the notebook\n",
+    "(to be completed)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -20,16 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BlueBrainSearch to BlueBrainGraph: POC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook shows how from raw text we can apply BlueBrainSearch and then BlueBrainGraph tools in order to generate first a list of extracted objects of interest, and then a knowledge graph out of it.\n",
-    "\n",
-    "It is intended to be just a proof of concept of the pipeline."
+    "# Set topic\n",
+    "The user defines its topic."
    ]
   },
   {
@@ -37,24 +37,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# This variable contains the data transiting between 1.5.1/1.5.2 and 1.5.3.\n",
-    "# This is expected to be filled at the end of the Blue Brain Search process.\n",
-    "table = None"
+    "# Import data\n",
+    "The user loads data from a data source (CORD-19).\n",
+    "The loaded data forms the corpus.\n",
+    "The user searches the CORPUS in Blue Brain Search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set schemas\n",
+    "The user defines the KG schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a knowledge graph according to schemas\n",
+    "The user extracts data from the text of a set of papers using selected Named Entity Recognizers and Relation Extractors from Blue Brain Search.\n",
+    "The user can preview the extracted data.\n",
+    "The user curates extracted data.\n",
+    "The user links the extracted entities and relations to ontologies.\n",
+    "The user saves data into Knowledge Graph."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BlueBrainSearch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This first part of the pipeline starts with the raw text of a scientific paper as an input, and generates a CSV table out of it. The table contains all the extracted entities and relations that were identified in the text.\n",
     "- **input**: raw text\n",
     "- **output**: csv table of extracted entities/relations"
    ]
@@ -137,18 +169,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
    "source": [
-    "## BlueBrainGraph"
+    "# This is the output: csv table of extracted entities/relations.\n",
+    "table = None"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This second part of the pipeline starts with the extracted entities and relations in a CSV table, and generates a knowledge graph out of it.\n",
-    "\n",
     "- **input**: csv table of extracted entities/relations\n",
     "- **output**: knowledge graph"
    ]
@@ -156,7 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# This returns the dimensionality of the extracted data.\n",
@@ -167,14 +208,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [cont'd from 1.5.3] 1.5 Create a knowledge graph according to schemas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.5.3 Map data to a knowledge graph according to schemas"
+    "# Validate the knowledge graph\n",
+    "User reviews content of Knowledge Graph."
    ]
   },
   {
@@ -182,15 +217,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Validate knowledge graph"
+    "# Access the knowledge graph\n",
+    "The user can search, visualize, and export the knowledge graph."
    ]
   },
   {
@@ -198,109 +232,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [optional] 2.2 Correct knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.2.1 Identify errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.2.3 Update imported data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1 Access knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.1.2 Visualize knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.1.3 Export knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2 Version the knowledge graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.2.1 Save knowledge graph with a version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO"
+    "# Save and version the knowledge graph\n",
+    "The user can save a knowledge graph with a version."
    ]
   },
   {
