--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -200,9 +200,111 @@
    },
    "outputs": [],
    "source": [
-    "# This returns the dimensionality of the extracted data.\n",
-    "table.shape"
+    "# TEMPORARY This is an example to demonstrate the following part.\n",
+    "table = pd.DataFrame({\n",
+    "    'entity': ['arginine', 'autophagy gene', 'mice'],\n",
+    "    'paper_id': ['https://doi.org/10.1038/s41586-018-0697-7'] * 3,\n",
+    "    'start': [54, 288, 317],\n",
+    "    'end': [62, 302, 321],\n",
+    "})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The table has {table.shape[0]} rows.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from typing import Iterator, Dict\n",
+    "\n",
+    "def represent_as_annotations(df: pd.DataFrame) -> Iterator[Dict]:\n",
+    "    def _(row):\n",
+    "        return {\n",
+    "            '@context': 'http://www.w3.org/ns/anno.jsonld',\n",
+    "            'id': f'https://bbp.epfl.ch/covid19/{row.Index}',\n",
+    "            'type': 'Annotation',\n",
+    "            'target': {\n",
+    "                'source': row.paper_id,\n",
+    "                'selector': {\n",
+    "                    'type': 'TextPositionSelector',\n",
+    "                    'start': row.start,\n",
+    "                    'end': row.end,\n",
+    "                    'value': row.entity,\n",
+    "                },\n",
+    "            },\n",
+    "            # 'body': coming in the next iteration.\n",
+    "        }\n",
+    "    return (_(x) for x in df.itertuples())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotations = represent_as_annotations(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from typing import Iterator, Dict\n",
+    "from rdflib import Graph\n",
+    "\n",
+    "def load_knowledge_graph(jsonlds: Iterator[Dict]) -> Graph:\n",
+    "    g = Graph()\n",
+    "    for x in jsonlds:\n",
+    "        g.parse(data=json.dumps(x), format='json-ld')\n",
+    "    return g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNOWN ISSUE: Classes are not mapped to 'oa' vocabulary. Fix to come in the next iteration.\n",
+    "knowledge_graph = load_knowledge_graph(annotations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The knowledge graph has {len(knowledge_graph)} triples.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -266,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
