Create mining pipeline (NER + RE) [BBS-47]
New subpackage 'mining' was created that implements both NER and RE

Note that one needs to have scibert in PYTHONPATH to be able to run the POC notebook

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -1,19 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODOs**\n",
+    "- [ ] The trained SciBERT model `scibert_chemprot.tar.gz` stores inside itself \n",
+    "  absolute paths to vocabulary text and weights! So it cannot be move around\n",
+    "  without rewriting its metadata inside.\n",
+    "- [ ] SciBERT can not be obtained with `pip install`, so currently one needs to \n",
+    "    1. `git clone https://github.com/allenai/scibert.git`\n",
+    "    2. `export PYTHONPATH=$PYTHONPATH:PATH_TO_SCIBERT`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import OrderedDict\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import IPython\n",
     "import ipywidgets\n",
     "import pandas as pd\n",
     "import scispacy\n",
-    "import spacy"
+    "import spacy\n",
+    "\n",
+    "from bbsearch.mining import ChemProt, run_pipeline"
    ]
   },
   {
@@ -51,75 +66,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "NER_PIPELINE = spacy.load(\"en_ner_craft_md\")"
+    "DEFAULT_TEXT = \"\"\"Autophagy maintains tumour growth through circulating\n",
+    "arginine. Autophagy captures intracellular components and delivers them to\n",
+    "lysosomes, where they are degraded and recycled to sustain metabolism and to\n",
+    "enable survival during starvation. Acute, whole-body deletion of the essential \n",
+    "autophagy gene Atg7 in adult mice causes a systemic metabolic defect that \n",
+    "manifests as starvation intolerance and gradual loss of white adipose tissue, \n",
+    "liver glycogen and muscle mass.  Cancer cells also benefit from autophagy. \n",
+    "Deletion of essential autophagy genes impairs the metabolism, proliferation, \n",
+    "survival and malignancy of spontaneous tumours in models of autochthonous \n",
+    "cancer. Acute, systemic deletion of Atg7 or acute, systemic expression of a \n",
+    "dominant-negative ATG4b in mice induces greater regression of KRAS-driven \n",
+    "cancers than does tumour-specific autophagy deletion, which suggests that host \n",
+    "autophagy promotes tumour growth.\n",
+    "\"\"\".replace('\\n', ' ').replace('  ', ' ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
-    "import IPython\n",
+    "# Entities Extractors (EE)\n",
+    "ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
+    "# Relations Extractors (RE)\n",
+    "PATH_ASSETS = Path('/raid/covid_data/assets')\n",
+    "PATH_CHEMPROT_TRAINED_MODEL = PATH_ASSETS / 'scibert_chemprot.tar.gz'\n",
+    "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Widgets\n",
     "bbs_widgets = OrderedDict()\n",
+    "\n",
+    "# \"Input Text\" Widget\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
-    "        value=\"Autophagy maintains tumour growth through circulating arginine. Autophagy captures intracellular components and delivers them to lysosomes, where they are degraded and recycled to sustain metabolism and to enable survival during starvation1-5. Acute, whole-body deletion of the essential autophagy gene Atg7 in adult mice causes a systemic metabolic defect that manifests as starvation intolerance and gradual loss of white adipose tissue, liver glycogen and muscle mass1. Cancer cells also benefit from autophagy. Deletion of essential autophagy genes impairs the metabolism, proliferation, survival and malignancy of spontaneous tumours in models of autochthonous cancer6,7. Acute, systemic deletion of Atg7 or acute, systemic expression of a dominant-negative ATG4b in mice induces greater regression of KRAS-driven cancers than does tumour-specific autophagy deletion, which suggests that host autophagy promotes tumour growth1,8. Here we show that host-specific deletion of Atg7 impairs the growth of multiple allografted tumours, although not all tumour lines were sensitive to host autophagy status. Loss of autophagy in the host was associated with a reduction in circulating arginine, and the sensitive tumour cell lines were arginine auxotrophs owing to the lack of expression of the enzyme argininosuccinate synthase 1. Serum proteomic analysis identified the arginine-degrading enzyme arginase I (ARG1) in the circulation of Atg7-deficient hosts, and in vivo arginine metabolic tracing demonstrated that serum arginine was degraded to ornithine. ARG1 is predominantly expressed in the liver and can be released from hepatocytes into the circulation. Liver-specific deletion of Atg7 produced circulating ARG1, and reduced both serum arginine and tumour growth. Deletion of Atg5 in the host similarly regulated [corrected] circulating arginine and suppressed tumorigenesis, which demonstrates that this phenotype is specific to autophagy function rather than to deletion of Atg7. Dietary supplementation of Atg7-deficient hosts with arginine partially restored levels of circulating arginine and tumour growth. Thus, defective autophagy in the host leads to the release of ARG1 from the liver and the degradation of circulating arginine, which is essential for tumour growth; this identifies a metabolic vulnerability of cancer. (PMID:30429607)\",\n",
-    "        layout=ipywidgets.Layout(width='80%', height='400px')\n",
+    "        value=DEFAULT_TEXT,\n",
+    "        layout=ipywidgets.Layout(width='75%', height='300px')\n",
     "    )\n",
+    "\n",
+    "# \"Submit!\" Button\n",
     "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
     "    description='Extract Entities & Properties!',\n",
     "    layout=ipywidgets.Layout(width='30%')\n",
     ")\n",
-    "\n",
-    "bbs_widgets['out'] = ipywidgets.Output(layout={'border': '0.5px solid black'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def extract_entities_and_relations(b):\n",
+    "def cb(b):\n",
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
-    "        doc = NER_PIPELINE(bbs_widgets['input_text'].value)\n",
-    "        lines = []\n",
-    "        for ent in doc.ents:\n",
-    "            lines.append(pd.Series({'entity': ent.text,\n",
-    "                                    'entity_type': ent.label_,\n",
-    "                                    'property':None,\n",
-    "                                    'property_value':None,\n",
-    "                                    'property_type':None,\n",
-    "                                    'property_value_type':None,\n",
-    "                                    'ontology_source':'MyOntology',\n",
-    "                                    'paper_id':0,\n",
-    "                                    'start_pos': ent.start_char,\n",
-    "                                    'end_pos': ent.end_char,\n",
-    "                                    }))\n",
+    "        text = bbs_widgets['input_text'].value\n",
+    "        df_extracted_elements = run_pipeline(text, ee_model, re_models)\n",
+    "        display(df_extracted_elements)\n",
+    "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
-    "        df = pd.DataFrame(lines)\n",
-    "        display(df)\n",
+    "# \"Output Area\" Widget\n",
+    "bbs_widgets['out'] = ipywidgets.Output(layout={'border': '0.5px solid black'})\n",
     "\n",
-    "bbs_widgets['submit_button'].on_click(extract_entities_and_relations)\n",
-    "\n",
+    "# Finalize Widgets\n",
     "ordered_widgets = list(bbs_widgets.values())\n",
     "main_widget = ipywidgets.VBox(ordered_widgets)\n",
     "IPython.display.display(main_widget)"
