Add ontology matching and corresponding data model

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -171,11 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is the output: csv table of extracted entities/relations.\n",
@@ -200,7 +196,24 @@
    },
    "outputs": [],
    "source": [
+    "# TEMPORARY The specific requirements needed for the following part. Waiting for decision.\n",
+    "! pip install rdflib-jsonld\n",
+    "! wget ftp://ftp.ebi.ac.uk/pub/databases/chebi/ontology/chebi_lite.owl  # TEMPORARY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
     "# TEMPORARY This is an example to demonstrate the following part.\n",
+    "import pandas as pd\n",
+    "\n",
     "table = pd.DataFrame({\n",
     "    'entity': ['arginine', 'autophagy gene', 'mice'],\n",
     "    'paper_id': ['https://doi.org/10.1038/s41586-018-0697-7'] * 3,\n",
@@ -229,23 +242,23 @@
    "outputs": [],
    "source": [
     "from typing import Iterator, Dict\n",
+    "import pandas as pd\n",
     "\n",
     "def represent_as_annotations(df: pd.DataFrame) -> Iterator[Dict]:\n",
     "    def _(row):\n",
     "        return {\n",
     "            '@context': 'http://www.w3.org/ns/anno.jsonld',\n",
-    "            'id': f'https://bbp.epfl.ch/covid19/{row.Index}',\n",
-    "            'type': 'Annotation',\n",
+    "            '@id': f'https://bbp.epfl.ch/covid19/{row.Index}',\n",
+    "            '@type': 'Annotation',\n",
     "            'target': {\n",
     "                'source': row.paper_id,\n",
     "                'selector': {\n",
-    "                    'type': 'TextPositionSelector',\n",
+    "                    '@type': 'TextPositionSelector',\n",
     "                    'start': row.start,\n",
     "                    'end': row.end,\n",
     "                    'value': row.entity,\n",
     "                },\n",
     "            },\n",
-    "            # 'body': coming in the next iteration.\n",
     "        }\n",
     "    return (_(x) for x in df.itertuples())"
    ]
@@ -257,6 +270,52 @@
    "outputs": [],
    "source": [
     "annotations = represent_as_annotations(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TEMPORARY Real version to come. Just to set the structure. Very slow: 1.3 millions triples.\n",
+    "\n",
+    "from typing import Iterator, Dict\n",
+    "from rdflib import Graph\n",
+    "\n",
+    "g_chebi = Graph()\n",
+    "g_chebi.load('chebi_lite.owl')\n",
+    "\n",
+    "def enrich_annotations(annotations: Iterator[Dict], ontology: Graph) -> Iterator[Dict]:\n",
+    "    def _(ann):\n",
+    "        mention = ann['target']['selector']['value']\n",
+    "        res = ontology.query(f\"\"\"\n",
+    "            PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "            SELECT ?id ?label\n",
+    "            WHERE {{\n",
+    "                ?id rdfs:label ?label .\n",
+    "                FILTER regex(?label, '^{mention}s?$', 'i')\n",
+    "            }}\"\"\")\n",
+    "        for row in res:\n",
+    "            ann['body'] = {\n",
+    "                '@id': str(row['id']),\n",
+    "                'label': row['label'].value,\n",
+    "            }\n",
+    "        return ann\n",
+    "    return (_(x) for x in annotations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enriched_annotations = enrich_annotations(annotations, g_chebi)"
    ]
   },
   {
@@ -286,8 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# KNOWN ISSUE: Classes are not mapped to 'oa' vocabulary. Fix to come in the next iteration.\n",
-    "knowledge_graph = load_knowledge_graph(annotations)"
+    "knowledge_graph = load_knowledge_graph(enriched_annotations)"
    ]
   },
   {
